add find by id marketplace and prettier
